# MYthon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: array.mth  closure.mth  factorial.mth  for.mth  nbody.mth  sieve.mth  sort.mth
examples/additional/: array.mth  closure.mth  for.mth  scope.mth
src/cli/: cli.c  cli.h  main.c  repl.c  repl.h
src/core/: ast.c  ast.h  bytecode.c  bytecode.h  compiler.c  compiler.h  debug.c  debug.h  dfa_generator.c  dfa_lexer.c  dfa_lexer.h  fast_lexer.c  lexer.c  lexer.h  parser.c  parser.h  vm.c  vm.h
src/runtime/: gc.c  gc.h  jit.c  jit.h  jit_codegen.dasc  jit_codegen.h  jit_helpers.c  jit_vm_bridge.c  jit_vm_bridge.h  native.c  native.h  vm.c  vm.h
src/utils/: memory.c  memory.h  utils.c  utils.h
